# banyan

./: README.md  pyproject.toml
banyan/: decorators.py
banyan/regression/linear/: ols.py
tests/regression/linear/: test.py
