[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
name = "banyan"
version = "0.1.0"
author = "Zuiho"
author_email = "sxlllslgh@gmail.com"
description = "A high-performance econometrics library."
long_description = "file: README.md"
long_description_content_type = "text/markdown; charset=UTF-8"
url = "https://github.com/sxlllslgh/banyan"
license = "GPLv3"
license_files = ["LICENSE"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

packages = find:
package_dir = "banyan"

install_requires = {
    "numpy",
    "pandas"
}

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]